# STRATA

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  netlify.toml  pyproject.toml
.github/workflows/: deploy-venom.yml
alembic/: env.py
app/: config.py  database.py  dependencies.py  main.py
app/api/: router.py
app/api/v1/: accounts.py  analysis.py  auth.py  brief.py  coverage.py  health.py  market.py  strategy.py
app/audit/: middleware.py  service.py
app/models/: __init__.py  account.py  analysis.py  audit.py  base.py  session.py  user.py
app/prompts/analysis/: exposure_analysis.jinja2
app/prompts/brief/: parking_lot.jinja2
app/prompts/coverage/: gap_detection.jinja2
app/prompts/market/: carrier_intel.jinja2
app/prompts/strategy/: submission_plan.jinja2
app/schemas/: account.py  analysis.py  auth.py  brief.py  common.py  coverage.py  market.py  strategy.py
app/seeds/: demo_accounts.py  seed_all.py
app/services/analysis/: service.py
app/services/brief/: service.py
app/services/core/: base.py  llm_client.py  mock_responses.py  prompt_engine.py
app/services/coverage/: service.py
app/services/market/: service.py
app/utils/: exceptions.py  logging.py  security.py
frontend/: package-lock.json  package.json
scripts/: live_smoke.py
tests/: conftest.py  test_accounts.py  test_analysis.py  test_auth.py  test_brief.py  test_health.py
venom-softball/: index.html  package-lock.json  package.json  vite.config.js
venom-softball/src/: App.jsx  index.css  main.jsx  supabaseClient.js
(+40 files in other folders)
